fix: Layout bug with responsive

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,5 +1,5 @@
 .mainContent {
-  padding: 2rem 3rem;
+  padding: 2rem 1rem;
   margin: 0 auto;
   /* max-width: 1400px; */
 }
@@ -84,7 +84,7 @@
   border-radius: 10px;
   box-shadow: 18px 14px 33px -7px rgba(0, 0, 0, 0.07);
 
-  font-size: 2.25rem;
+  font-size: 2rem;
   text-align: center;
   text-transform: uppercase;
   font-weight: var(--fw-sec);
